[package]
name = "bevy_text_input"
version = "0.7.0"
edition = "2021"
license = "MIT"
description = "Bevy plugin for a simple single-line text input widget."
repository = "https://github.com/ka-de/bevy_text_input"
homepage = "https://github.com/rparrett/bevy_simple_text_input"
documentation = "https://docs.rs/bevy_simple_text_input"
keywords = ["bevy", "gamedev"]
categories = ["game-development"]
readme = "README.md"
exclude = [".github"]

[dependencies.bevy]
version = "0.13.2"
default-features = false
features = ["bevy_ui", "bevy_asset", "bevy_text"]

[dev-dependencies.bevy]
version = "0.13.2"
default-features = true

[lints.rust]
missing_docs = "warn"

[lints.clippy]
type_complexity = "allow"
